# quant-ai-trader

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  RESOURCES.md  SAFETY.md  TASKS.md  pyproject.toml
apps/: __init__.py
apps/agent/: __init__.py  agent_config.py  ai_decider.py  llm_runner.py  prompts.py  tool_schemas.py  tools.py
apps/api/: __init__.py  main.py
apps/api/routes/: __init__.py  backtests.py  data.py  paper_trading.py  risk.py  strategies.py
apps/dashboard/: __init__.py
config/: app.yaml  external_repos.yaml  risk.yaml  strategy_validation.yaml  symbols.yaml  timeframes.yaml
data/paper_trades/: .gitignore
data/predictions/: .gitignore
docs/: CODEBASE_MEMORY_MCP.md  FINAL_SAFETY_REVIEW.md  GETTING_STARTED.md  KRONOS_SETUP.md  MT5_EXECUTION_SETUP.md  OPENBB_SETUP.md  QUANTDINGER_SETUP.md  RUNBOOK_AI_TRADING_LOOP.md  RUNBOOK_MT5_DEMO_ACCOUNT.md  RUNBOOK_PAPER_TRADING.md  RUNBOOK_RISK_MANAGER.md  RUNBOOK_STRATEGY_PORTING.md  STRATEGY_INVENTORY.md  TROUBLESHOOTING.md  WORLDMONITOR_SETUP.md
scripts/: ai_trade_loop.py  clone_external_repos.py  download_mt5_history.py  index_codebase_memory.ps1  index_codebase_memory.sh  ingest_pricer_history.py  test_kronos_prediction.py  trade_demo.py  validate_strategy.py  walk_strategy.py
services/: __init__.py  config_loader.py  models.py
services/backtest_service/: __init__.py  adapter_bridge.py  costs.py  metrics.py  portfolio_backtester.py  quantdinger_client.py  simple_backtester.py  strategy_validator.py
services/data_service/: __init__.py  features.py  local_data.py  mt5_data.py  openbb_data.py  query.py  sample_data.py  sessions.py  storage.py
services/execution_service/: __init__.py  audit_log.py  base_gateway.py  mock_mt5_gateway.py  mt5_gateway.py  paper_execution.py  trade_log.py
services/kronos_service/: __init__.py  base.py  mock_kronos.py  real_kronos.py
services/macro_service/: __init__.py  worldmonitor_client.py
services/monitoring_service/: __init__.py  degradation.py  performance_monitor.py
services/resource_service/: __init__.py  repo_manager.py  repo_manifest.py
services/risk_service/: __init__.py  position_sizing.py  risk_manager.py  symbol_specs.py
services/strategy_service/: __init__.py  base.py  inventory_scanner.py  registry.py  strategy_classifier.py
services/strategy_service/adapters/: __init__.py  _common.py  awesome_oscillator.py  bollinger_bands_pattern.py  dual_thrust.py  heikin_ashi.py  london_breakout.py  macd_oscillator.py  null_adapter.py  parabolic_sar.py  rsi_pattern.py  (+1 more)
strategies/inventory/: quant_trading_inventory.json
tests/: conftest.py  test_adapter_awesome_oscillator.py  test_adapter_bollinger_bands_pattern.py  test_adapter_bridge.py  test_adapter_dual_thrust.py  test_adapter_heikin_ashi.py  test_adapter_london_breakout.py  test_adapter_macd_oscillator.py  test_adapter_parabolic_sar.py  test_adapter_rsi_pattern.py  test_adapter_shooting_star.py  test_adapters_registration.py  test_agent_tools.py  test_ai_decider.py  test_ai_trade_loop.py  test_api.py  test_audit_log.py  test_backtest_metrics.py  test_candle_query.py  test_candle_storage.py  test_codebase_memory_docs.py  test_config_loader.py  test_execution_safety_guards.py  test_features.py  test_full_pipeline_smoke.py  test_governance.py  test_kronos_interface.py  test_kronos_mock.py  test_llm_runner.py  test_local_data.py  test_mock_mt5_gateway.py  test_models.py  test_mt5_data_mapping.py  test_mt5_gateway_safety.py  test_openbb_interface.py  test_paper_execution.py  test_performance_monitor.py  test_portfolio_backtester.py  test_position_sizing.py  test_quantdinger_client.py  (+15 more)
(+12 files in other folders)
