[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-ai-trader"
version = "0.0.0"
description = "Paper-first, risk-controlled quantitative trading AI research system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "pyarrow>=15",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
# Python packages live under apps/ and services/. Data directories
# (data/, strategies/, research/, external/, config/) are intentionally
# excluded — they hold artifacts/config, not importable code.
include = ["apps*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]
# Put the project root on sys.path so tests import `services`/`apps`
# without requiring an editable install.
pythonpath = ["."]
