[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-ai-trader"
version = "0.0.0"
description = "Paper-first, risk-controlled quantitative trading AI research system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# MetaTrader 5 data collection (M14). Windows-only; talks to a local terminal.
# Install with `pip install -e .[mt5]` on the data-collection machine. Tests
# mock the package, so it is not needed for CI.
mt5 = [
    "MetaTrader5>=5.0; platform_system == 'Windows'",
]
# OpenBB research data (M17). Optional, research-only supplementary layer;
# heavy, so it is kept out of core deps. Install with `pip install -e .[openbb]`.
# Tests mock the client, so it is not needed for CI.
openbb = [
    "openbb>=4.0",
]
# QuantDinger integration (M18). Optional external backtest platform; the real
# client talks HTTP via `requests`. Tests use the mock / an injected session, so
# it is not needed for CI. Install with `pip install -e .[quantdinger]`.
quantdinger = [
    "requests>=2.31",
]

[tool.setuptools.packages.find]
# Python packages live under apps/ and services/. Data directories
# (data/, strategies/, research/, external/, config/) are intentionally
# excluded — they hold artifacts/config, not importable code.
include = ["apps*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]
# Put the project root on sys.path so tests import `services`/`apps`
# without requiring an editable install.
pythonpath = ["."]
